--- a/params.yaml
+++ b/params.yaml
@@ -1,6 +1,6 @@
 env: MiniGrid-Fetch-5x5-N2-v0
 gamma: 0.95
-theta: 0.000001
+theta: 0.0000000001
 maxstep: 500
 buffersize: 3000
-delta:
+delta: 0.1
