--- a/params.yaml
+++ b/params.yaml
@@ -1,6 +1,7 @@
 env: MiniGrid-Fetch-5x5-N2-v0
 gamma: 0.95
-theta: 0.0000000001
+theta: 0.00001
 maxstep: 500
 buffersize: 3000
 delta: 0.1
+num: 10
